src/whoami-ingress/template/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: digitalocean-dns
  name: whoami-ingress
  namespace: whoami-ingress
spec:
  rules:
  - host: ${WHOAMI_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: whoami
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - ${WHOAMI_DOMAIN}
    secretName: whoami-tls # < cert-manager will store the created certificate in this secret.
